--- a/style.css
+++ b/style.css
@@ -4,8 +4,27 @@ body
     color: darkgreen; 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 12px;
-    text-align: center;
+    
+    text-align: center;}
+
+.sy-home {width: 60px; 
+    border-image: 8px;}
+
+.footer {text-align: center; 
+    color:darkblue;
+    }
+
+
+.pagetitle { color:red; text-align: center;
+    background-color: lightskyblue
+    }
+
+    .contactHeader { color: maroon;
+        text-align: center; 
+    }
+
+.main-header {color: seagreen;text-align: center;
 }
-.sy-home {width: 75px;}
-.footer {text-align: center;}
-.pagetitle { text-align: center;}
+.row {padding: 5px;color: darkred; background-color: lemonchiffon;
+}
+.image {align-self: auto;}
