--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+
+html {height: 100%;}
+
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    }
+  
+  * {
+    box-sizing: border-box;
+    margin: 0;
+  }
+
+#row1 {color: darkblue;background-color: indianred;
+}
+
+h1 {color: brown;}
+
 body
 {
     background-color: lightslategray; 
@@ -7,15 +27,16 @@ body
     
     text-align: center;}
 
-.sy-home {width: 60px; 
+.pic1 {width: 60px; 
     border-image: 8px;}
 
 .footer {text-align: center; 
     color:darkblue;
     }
+.navbar {color: darkblue;background-color:lightgrey;}
 
-
-.pagetitle { color:red; text-align: center;
+.wrapper
+ { color: darkblue; text-align: center;
     background-color: lightskyblue
     }
 
@@ -23,8 +44,11 @@ body
         text-align: center; 
     }
 
-.main-header {color: seagreen;text-align: center;
+.container {color: seagreen;text-align: center;
 }
 .row {padding: 5px;color: darkred; background-color: lemonchiffon;
 }
 .image {align-self: auto;}
+.row {background-color: lightslategray;}
+
+.col-6 {border: black}
