--- a/style.css
+++ b/style.css
@@ -1,54 +1,42 @@
 
-html {height: 100%;}
 
-body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 34px;
-    color: #777;
-    }
-  
-  * {
-    box-sizing: border-box;
-    margin: 0;
-  }
 
-#row1 {color: darkblue;background-color: indianred;
-}
-
-h1 {color: brown;}
 
 body
 {
-    background-color: lightslategray; 
-    color: darkgreen; 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 12px;
     
-    text-align: center;}
-
-.pic1 {width: 60px; 
-    border-image: 8px;}
-
-.footer {text-align: center; 
-    color:darkblue;
-    }
-.navbar {color: darkblue;background-color:lightgrey;}
-
-.wrapper
- { color: darkblue; text-align: center;
-    background-color: lightskyblue
-    }
-
-    .contactHeader { color: maroon;
-        text-align: center; 
-    }
-
-.container {color: seagreen;text-align: center;
 }
-.row {padding: 5px;color: darkred; background-color: lemonchiffon;
-}
-.image {align-self: auto;}
-.row {background-color: lightslategray;}
 
-.col-6 {border: black}
+.container
+{
+    color: darkblue;
+    margin: 1px;
+    
+}
+#row1 
+{ 
+    color: black;
+    
+    background: lightgrey;
+}
+#row2
+{
+    color: blue;
+    
+    background: lightgrey;
+}
+.column1
+{
+background: plum;
+display: inline-flex;
+
+}
+.column2
+{
+    background: lightsalmon;
+
+}
+h1
+{
+    color: crimson;
+}
